@@ -2,7 +2,7 @@
 # Kernel/Config/Defaults.pm - Default Config file for OTRS kernel
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Defaults.pm,v 1.314 2009-04-20 08:16:21 martin Exp $
+# $Id: Defaults.pm,v 1.315 2009-04-20 08:27:18 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -25,7 +25,7 @@ use strict;
 use warnings;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.314 $) [1];
+$VERSION = qw($Revision: 1.315 $) [1];
 
 sub LoadDefaults {
     my $Self = shift;
@@ -279,8 +279,8 @@ sub LoadDefaults {
     # logfile [0|1]
 #    $Self->{'LogModule::LogFile::Date'} = 0;
 
-    # system log cache size for admin system log (default 64k)
-    # $Self->{'LogSystemCacheSize'} = 64 * 1024;
+    # system log cache size for admin system log (default 32k)
+    # $Self->{'LogSystemCacheSize'} = 32 * 1024;
 
     # --------------------------------------------------- #
     # SendmailModule
@@ -2389,6 +2389,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.314 $ $Date: 2009-04-20 08:16:21 $
+$Revision: 1.315 $ $Date: 2009-04-20 08:27:18 $
 
 =cut
